--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sf-jwt-token",
   "description": "Implementation of Salesforce OAuth 2.0 JWT bearer token flow.",
   "version": "1.3.0",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
@@ -29,15 +30,15 @@
   "license": "MIT",
   "dependencies": {
     "base64url-xplatform": "^1.1.2",
-    "request-it-client": "^1.3.3"
+    "request-it-client": "^1.4.1"
   },
   "devDependencies": {
     "@types/gulp-shell": "^0.7.0",
-    "@types/node": "^14.0.27",
-    "@types/tough-cookie": "^4.0.0",
+    "@types/node": "^17.0.19",
+    "@types/tough-cookie": "^4.0.1",
     "gulp": "^4.0.2",
     "gulp-shell": "^0.8.0",
-    "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
   }
 }
