--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist",
-    "esm"
+    "dist"
   ],
   "scripts": {
     "prepack": "gulp tsc",
